# Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README copy.md  pyproject.toml  unit.ini
Agent-AI/: README.md
Agent-AI/src/: main.py
Agent-AI/src/agents/: __init__.py  agents.py
Agent-AI/src/agents/Agent_AI/: Agent_AI.py  model.py  pre_model_hook.py
Agent-AI/src/agents/Agent_AI/prompt/: models.py  prompt.md  utils.py
Agent-AI/src/app/: formatters.py  main.py  types.py  utils.py
Agent-AI/src/core/: llm.py  settings.py
Agent-AI/src/schema/: __init__.py  schema.py
Agent-AI/src/tools/: Add.py  Multiplie.py  Sous.py  __init__.py  divide.py  weather_tool.py
Agent-AI/utils/cli/: .env.example  README.md  __init__.py  agent_cli.py  agents_config.json  config.py
Agent-AI/utils/cli/tests/: README.md  conftest.py  test_config.py  test_dotenv.py
